--- a/requirements.txt
+++ b/requirements.txt
@@ -1,29 +1,151 @@
+agentjo==0.0.1
+aiohappyeyeballs==2.4.3
+aiohttp==3.10.10
+aiosignal==1.3.1
+annotated-types==0.7.0
 anthropic==0.37.1
+anyio==4.6.2.post1
+asgiref==3.8.1
+asyncio==3.4.3
+attrs==24.2.0
+backoff==2.2.1
+bcrypt==4.2.0
 beautifulsoup4==4.12.3
+build==1.2.2.post1
+cachetools==5.5.0
+certifi==2024.8.30
+cffi==1.17.1
+charset-normalizer==3.4.0
+chroma-hnswlib==0.7.6
+chromadb==0.5.17
+click==8.1.7
+cobble==0.1.4
+coloredlogs==15.0.1
+cryptography==43.0.3
 datasets==2.21.0
+Deprecated==1.2.14
+dill==0.3.8
+distro==1.9.0
+durationpy==0.9
+fastapi==0.115.4
+filelock==3.16.1
+flatbuffers==24.3.25
+frozenlist==1.5.0
+fsspec==2024.6.1
+google-auth==2.35.0
 google_search_results==2.4.2
-huggingface_hub==0.23.4
+googleapis-common-protos==1.65.0
+grpcio==1.67.1
+h11==0.14.0
+httpcore==1.0.6
+httptools==0.6.4
+httpx==0.27.2
+huggingface-hub==0.23.4
+humanfriendly==10.0
+idna==3.10
+importlib_metadata==8.4.0
+importlib_resources==6.4.5
+Jinja2==3.1.4
+jiter==0.7.0
+jsonpatch==1.33
+jsonpointer==3.0.0
+kubernetes==31.0.0
 langchain==0.3.4
-langchain_core==0.3.13
+langchain-core==0.3.13
+langchain-text-splitters==0.3.1
+langsmith==0.1.139
+lxml==5.3.0
 mammoth==1.8.0
+markdown-it-py==3.0.0
 markdownify==0.13.1
+MarkupSafe==3.0.2
+mdurl==0.1.2
+mmh3==5.0.1
+monotonic==1.6
+mpmath==1.3.0
+multidict==6.1.0
+multiprocess==0.70.16
+networkx==3.4.2
 numexpr==2.10.1
-numpy==2.1.2
+numpy==1.26.4
+oauthlib==3.2.2
+onnxruntime==1.20.0
 openai==1.52.2
+opentelemetry-api==1.27.0
+opentelemetry-exporter-otlp-proto-common==1.27.0
+opentelemetry-exporter-otlp-proto-grpc==1.27.0
+opentelemetry-instrumentation==0.48b0
+opentelemetry-instrumentation-asgi==0.48b0
+opentelemetry-instrumentation-fastapi==0.48b0
+opentelemetry-proto==1.27.0
+opentelemetry-sdk==1.27.0
+opentelemetry-semantic-conventions==0.48b0
+opentelemetry-util-http==0.48b0
+orjson==3.10.11
+overrides==7.7.0
+packaging==24.1
 pandas==2.2.3
 pathvalidate==3.2.1
 pdfminer==20191125
 pdfminer.six==20240706
-Pillow==11.0.0
+pillow==11.0.0
+posthog==3.7.0
+propcache==0.2.0
+protobuf==4.25.5
 puremagic==1.28
+pyarrow==18.0.0
+pyasn1==0.6.1
+pyasn1_modules==0.4.1
+pycparser==2.22
+pycryptodome==3.21.0
+pydantic==2.9.2
+pydantic_core==2.23.4
+Pygments==2.18.0
 pypdf==5.1.0
+PyPDF2==3.0.1
+PyPika==0.48.9
+pyproject_hooks==1.2.0
+python-dateutil==2.9.0.post0
+python-docx==1.1.2
 python-dotenv==1.0.1
-python_pptx==1.0.2
-Requests==2.32.3
+python-pptx==1.0.2
+pytz==2024.2
+PyYAML==6.0.2
+regex==2024.9.11
+requests==2.32.3
+requests-oauthlib==2.0.0
+requests-toolbelt==1.0.0
+rich==13.9.4
+rsa==4.9
+safetensors==0.4.5
 serpapi==0.1.5
-tqdm==4.65.0
-tqdm==4.66.4
+shellingham==1.5.4
+six==1.16.0
+sniffio==1.3.1
+soupsieve==2.6
+SQLAlchemy==2.0.36
+starlette==0.41.2
+sympy==1.13.3
+tenacity==9.0.0
+termcolor==2.5.0
+tokenizers==0.20.2
 torch==2.2.2
 torchvision==0.17.2
+tqdm==4.66.4
 transformers==4.46.0
-youtube_transcript_api==0.6.2
+typer==0.12.5
+typing_extensions==4.12.2
+tzdata==2024.2
+urllib3==2.2.3
+uvicorn==0.32.0
+uvloop==0.21.0
+watchfiles==0.24.0
+websocket-client==1.8.0
+websockets==13.1
+wrapt==1.16.0
+xlrd==2.0.1
+XlsxWriter==3.2.0
+xxhash==3.5.0
+yarl==1.17.1
+youtube-transcript-api==0.6.2
+zipp==3.20.2
