--- a/requirements.txt
+++ b/requirements.txt
@@ -22,6 +22,7 @@ click==8.1.7
 cobble==0.1.4
 coloredlogs==15.0.1
 cryptography==43.0.3
+dataclasses-json==0.6.7
 datasets==2.21.0
 Deprecated==1.2.14
 dill==0.3.8
@@ -40,6 +41,7 @@ h11==0.14.0
 httpcore==1.0.6
 httptools==0.6.4
 httpx==0.27.2
+httpx-sse==0.4.0
 huggingface-hub==0.23.4
 humanfriendly==10.0
 idna==3.10
@@ -50,8 +52,10 @@ jiter==0.7.0
 jsonpatch==1.33
 jsonpointer==3.0.0
 kubernetes==31.0.0
-langchain==0.3.4
-langchain-core==0.3.13
+langchain==0.3.7
+langchain-community==0.3.5
+langchain-core==0.3.15
+langchain-experimental==0.3.3
 langchain-text-splitters==0.3.1
 langsmith==0.1.139
 lxml==5.3.0
@@ -59,12 +63,14 @@ mammoth==1.8.0
 markdown-it-py==3.0.0
 markdownify==0.13.1
 MarkupSafe==3.0.2
+marshmallow==3.23.1
 mdurl==0.1.2
 mmh3==5.0.1
 monotonic==1.6
 mpmath==1.3.0
 multidict==6.1.0
 multiprocess==0.70.16
+mypy-extensions==1.0.0
 networkx==3.4.2
 numexpr==2.10.1
 numpy==1.26.4
@@ -99,6 +105,7 @@ pyasn1_modules==0.4.1
 pycparser==2.22
 pycryptodome==3.21.0
 pydantic==2.9.2
+pydantic-settings==2.6.1
 pydantic_core==2.23.4
 Pygments==2.18.0
 pypdf==5.1.0
@@ -123,7 +130,7 @@ shellingham==1.5.4
 six==1.16.0
 sniffio==1.3.1
 soupsieve==2.6
-SQLAlchemy==2.0.36
+SQLAlchemy==2.0.35
 starlette==0.41.2
 sympy==1.13.3
 tenacity==9.0.0
@@ -134,6 +141,7 @@ torchvision==0.17.2
 tqdm==4.66.4
 transformers==4.46.0
 typer==0.12.5
+typing-inspect==0.9.0
 typing_extensions==4.12.2
 tzdata==2024.2
 urllib3==2.2.3
