--- a/requirements.txt
+++ b/requirements.txt
@@ -5,12 +5,20 @@ aiosignal==1.3.1
 annotated-types==0.7.0
 anthropic==0.37.1
 anyio==4.6.2.post1
+appnope==0.1.4
+argon2-cffi==23.1.0
+argon2-cffi-bindings==21.2.0
+arrow==1.3.0
 asgiref==3.8.1
+asttokens==2.4.1
+async-lru==2.0.4
 asyncio==3.4.3
 attrs==24.2.0
+babel==2.16.0
 backoff==2.2.1
 bcrypt==4.2.0
 beautifulsoup4==4.12.3
+bleach==6.2.0
 build==1.2.2.post1
 cachetools==5.5.0
 certifi==2024.8.30
@@ -21,16 +29,23 @@ chromadb==0.5.17
 click==8.1.7
 cobble==0.1.4
 coloredlogs==15.0.1
+comm==0.2.2
 cryptography==43.0.3
 dataclasses-json==0.6.7
 datasets==2.21.0
+debugpy==1.8.8
+decorator==5.1.1
+defusedxml==0.7.1
 Deprecated==1.2.14
 dill==0.3.8
 distro==1.9.0
 durationpy==0.9
+executing==2.1.0
 fastapi==0.115.4
+fastjsonschema==2.20.0
 filelock==3.16.1
 flatbuffers==24.3.25
+fqdn==1.5.1
 frozenlist==1.5.0
 fsspec==2024.6.1
 google-auth==2.35.0
@@ -47,31 +62,60 @@ humanfriendly==10.0
 idna==3.10
 importlib_metadata==8.4.0
 importlib_resources==6.4.5
+ipykernel==6.29.5
+ipython==8.29.0
+ipywidgets==8.1.5
+isoduration==20.11.0
+jedi==0.19.1
 Jinja2==3.1.4
 jiter==0.7.0
+json5==0.9.25
 jsonpatch==1.33
 jsonpointer==3.0.0
+jsonschema==4.23.0
+jsonschema-specifications==2024.10.1
+jupyter==1.1.1
+jupyter-console==6.6.3
+jupyter-events==0.10.0
+jupyter-lsp==2.2.5
+jupyter_client==8.6.3
+jupyter_core==5.7.2
+jupyter_server==2.14.2
+jupyter_server_terminals==0.5.3
+jupyterlab==4.2.5
+jupyterlab_pygments==0.3.0
+jupyterlab_server==2.27.3
+jupyterlab_widgets==3.0.13
 kubernetes==31.0.0
 langchain==0.3.7
-langchain-community==0.3.5
-langchain-core==0.3.15
+langchain-community==0.3.7
+langchain-core==0.3.19
 langchain-experimental==0.3.3
 langchain-text-splitters==0.3.1
 langsmith==0.1.139
 lxml==5.3.0
 mammoth==1.8.0
+Markdown==3.7
 markdown-it-py==3.0.0
 markdownify==0.13.1
 MarkupSafe==3.0.2
 marshmallow==3.23.1
+matplotlib-inline==0.1.7
 mdurl==0.1.2
+mistune==3.0.2
 mmh3==5.0.1
 monotonic==1.6
 mpmath==1.3.0
 multidict==6.1.0
 multiprocess==0.70.16
 mypy-extensions==1.0.0
+nbclient==0.10.0
+nbconvert==7.16.4
+nbformat==5.10.4
+nest-asyncio==1.6.0
 networkx==3.4.2
+notebook==7.2.2
+notebook_shim==0.2.4
 numexpr==2.10.1
 numpy==1.26.4
 oauthlib==3.2.2
@@ -91,13 +135,22 @@ orjson==3.10.11
 overrides==7.7.0
 packaging==24.1
 pandas==2.2.3
+pandocfilters==1.5.1
+parso==0.8.4
 pathvalidate==3.2.1
 pdfminer==20191125
 pdfminer.six==20240706
+pexpect==4.9.0
 pillow==11.0.0
+platformdirs==4.3.6
 posthog==3.7.0
+prometheus_client==0.21.0
+prompt_toolkit==3.0.48
 propcache==0.2.0
 protobuf==4.25.5
+psutil==6.1.0
+ptyprocess==0.7.0
+pure_eval==0.2.3
 puremagic==1.28
 pyarrow==18.0.0
 pyasn1==0.6.1
@@ -115,41 +168,60 @@ pyproject_hooks==1.2.0
 python-dateutil==2.9.0.post0
 python-docx==1.1.2
 python-dotenv==1.0.1
+python-json-logger==2.0.7
 python-pptx==1.0.2
 pytz==2024.2
 PyYAML==6.0.2
+pyzmq==26.2.0
+referencing==0.35.1
 regex==2024.9.11
 requests==2.32.3
 requests-oauthlib==2.0.0
 requests-toolbelt==1.0.0
+rfc3339-validator==0.1.4
+rfc3986-validator==0.1.1
 rich==13.9.4
+rpds-py==0.21.0
 rsa==4.9
 safetensors==0.4.5
+Send2Trash==1.8.3
 serpapi==0.1.5
 shellingham==1.5.4
 six==1.16.0
 sniffio==1.3.1
 soupsieve==2.6
 SQLAlchemy==2.0.35
+stack-data==0.6.3
 starlette==0.41.2
 sympy==1.13.3
 tenacity==9.0.0
 termcolor==2.5.0
+terminado==0.18.1
+tinycss2==1.4.0
 tokenizers==0.20.2
 torch==2.2.2
 torchvision==0.17.2
+tornado==6.4.1
 tqdm==4.66.4
+traitlets==5.14.3
 transformers==4.46.0
 typer==0.12.5
+types-python-dateutil==2.9.0.20241003
 typing-inspect==0.9.0
 typing_extensions==4.12.2
 tzdata==2024.2
+uri-template==1.3.0
 urllib3==2.2.3
 uvicorn==0.32.0
 uvloop==0.21.0
 watchfiles==0.24.0
+wcwidth==0.2.13
+webcolors==24.8.0
+webencodings==0.5.1
 websocket-client==1.8.0
 websockets==13.1
+widgetsnbextension==4.0.13
+wikipedia==1.4.0
 wrapt==1.16.0
 xlrd==2.0.1
 XlsxWriter==3.2.0
